Add ban feature

--- a/config.ini
+++ b/config.ini
@@ -1,7 +1,10 @@
 # Moderation settings
 [moderation]
+action = ban
+ban_duration = 1y
+ban_reason = spam
+log_message = spam
 ; whitelisted_countries = PT BR US
-reason = spam
 
 # Detection settings
 [detection]
