Add sane defaults, improve code quality and fix typo

--- a/config.ini
+++ b/config.ini
@@ -9,6 +9,6 @@ log_message = spam
 # Detection settings
 [detection]
 tokens = * & $ # @ ! ? / \ | + = . : ; - _ ~ ^ " ' ` ´
-mode = threshold
-max_threshold = 0.25
-max_consecutive_entries = 4
+mode = entries
+;max_threshold = 0.25
+max_consecutive_entries = 3
