--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,15 @@
-bidict==0.22.1
-certifi==2023.7.22
-charset-normalizer==3.2.0
-filelock==3.12.4
-h11==0.14.0
-idna==3.4
-platformdirs==3.10.0
-python-dotenv==1.0.0
-python-engineio==4.7.1
-python-socketio==5.9.0
-requests==2.31.0
-simple-websocket==0.10.1
-uritools==4.0.2
-urlextract==1.8.0
-urllib3==2.0.4
-websocket-client==1.6.3
-wsproto==1.2.0
+h11~=0.14.0
+pip~=23.2.1
+certifi~=2023.7.22
+requests~=2.31.0
+websocket-client~=1.6.4
+idna~=3.4
+urllib3~=2.0.6
+bidict~=0.22.1
+setuptools~=68.2.2
+filelock~=3.12.4
+platformdirs~=3.11.0
+uritools~=4.0.2
+urlextract~=1.8.0
+wsproto~=1.2.0
+python-dotenv~=1.0.0
