Add BasedFlare and custom user-agent support, update dependencies, rewrite session.py to moderator.py, and perform minor refactors

--- a/example.ini
+++ b/example.ini
@@ -1,3 +1,10 @@
+[yacam]
+; Whether to use the BasedSession (from https://pypi.org/project/basedflare-session/) instead of the requests session.
+;  This is useful if the site uses the BasedFlare protection since it will automatically solve the challenge.
+use_basedflare = true
+; The user agent to use.
+user_agent = YACAM/1.0
+
 [moderation]
 ; Action taken when a spam post is detected.
 ;  Deletes the post.
