--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,22 @@
-h11~=0.14.0
-pip~=23.2.1
-certifi~=2023.7.22
-requests~=2.31.0
-websocket-client~=1.6.4
-idna~=3.4
-urllib3~=2.0.6
-bidict~=0.22.1
-setuptools~=68.2.2
-filelock~=3.12.4
-platformdirs~=3.11.0
-uritools~=4.0.2
-urlextract~=1.8.0
-wsproto~=1.2.0
-python-dotenv~=1.0.0
+argon2-cffi==23.1.0
+argon2-cffi-bindings==21.2.0
+basedflare-session==0.1.1
+bidict==0.23.1
+certifi==2024.7.4
+cffi==1.16.0
+charset-normalizer==3.3.2
+filelock==3.15.4
+h11==0.14.0
+idna==3.7
+platformdirs==4.2.2
+pycparser==2.22
+python-dotenv==1.0.1
+python-engineio==4.9.1
+python-socketio==5.11.3
+requests==2.32.3
+simple-websocket==1.0.0
+uritools==4.0.3
+urlextract==1.9.0
+urllib3==2.2.2
+websocket-client==1.8.0
+wsproto==1.2.0
