Update README.md and change config defaults

--- a/example.ini
+++ b/example.ini
@@ -1,7 +1,7 @@
 [yacam]
 ; Whether to use the BasedSession (from https://pypi.org/project/basedflare-session/) instead of the requests session.
 ;  This is useful if the site uses the BasedFlare protection since it will automatically solve the challenge.
-use_basedflare = true
+use_basedflare = false
 ; The user agent to use.
 user_agent = YACAM/1.0
 
